[gd_scene load_steps=10 format=3 uid="uid://hbvn40flrfwa"]

[ext_resource type="Script" path="res://Script/arrow_button.gd" id="1_2lgtv"]
[ext_resource type="Texture2D" uid="uid://bhtl4lmb0q0qm" path="res://Assets/arrow_button_up1.png" id="1_r8yst"]
[ext_resource type="Texture2D" uid="uid://shfjhw7h6pyr" path="res://Assets/arrow_button_up2.png" id="2_rcev3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v23ui"]
atlas = ExtResource("1_r8yst")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mli47"]
atlas = ExtResource("2_rcev3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_3mfgi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v23ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mli47")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2oxvl"]
size = Vector2(12, 6.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eg58"]
size = Vector2(12.25, 11.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o1nb"]
size = Vector2(12, 20)

[node name="ArrowButton" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_3mfgi")
frame = 1
frame_progress = 0.807008
script = ExtResource("1_2lgtv")

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
position = Vector2(0, -0.125)
shape = SubResource("RectangleShape2D_2oxvl")

[node name="GoodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
position = Vector2(0.125, 0.25)
shape = SubResource("RectangleShape2D_0eg58")

[node name="OkayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
shape = SubResource("RectangleShape2D_4o1nb")

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[connection signal="area_entered" from="PerfectArea" to="." method="_on_perfect_area_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_perfect_area_area_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_good_area_area_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_good_area_area_exited"]
[connection signal="area_entered" from="OkayArea" to="." method="_on_okay_area_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_okay_area_area_exited"]
[connection signal="timeout" from="PushTimer" to="." method="_on_push_timer_timeout"]
